--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@tanstack/react-query": "^4.20.2",
     "axios-rate-limit": "^1.3.0",
     "discord.js": "^14.8.0",
+    "framer-motion": "^11.3.30",
+    "framer-motion-3d": "^11.3.30",
     "next": "^14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
