--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^11.3.30",
     "framer-motion-3d": "^11.3.30",
     "next": "^14.2.4",
+    "polished": "^4.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-grid-system": "^8.2.0",
